# PYTHON-PROJECTS

./: .env  pyproject.toml
pythonic2/: app.py  bagels.py
