[tool.poetry]
name = "pythonic2"
version = "0.1.0"
description = ""
authors = ["muhammad-stack <142173430+muhammad-stack@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mypy = "^1.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
